# invoice-maker

./: .gitignore  DOCKER.md  FUTURE_IMPROVEMENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_chat_sessions.py  003_add_image_url_to_chat_messages.py  004_add_image_urls_json.py  005_add_session_id_to_invoices.py  006_add_preview_json_to_messages.py  007_add_archive_and_next_invoice_number.py  008_add_ticket_and_description_to_hours_entries.py  009_add_users_workspaces_and_business_profiles.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/api/: __init__.py  account.py  chat.py  clients.py  invoices.py  quick_invoice.py
backend/app/models/: __init__.py  business_profile.py  chat_session.py  client.py  hours_entry.py  invoice.py  line_item.py  uploaded_asset.py  user.py  workspace.py
backend/app/schemas/: __init__.py  account.py  chat.py  client.py  invoice.py
backend/app/services/: __init__.py  ai_service.py  invoice_parser.py  pdf_generator.py  s3_service.py
backend/app/templates/: base.css  contract_hourly.html  project.html  spectrio.html  tuition.html
backend/scripts/: seed_data.py  test_chat.py  test_e2e.py
docs/: clerk-launch-checklist.md  multi-user-saas-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
(+18 files in other folders)
